--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,6 +91,10 @@ p {
 /* sidebar */
 
 aside {
+	textarea {
+		height:100px;
+		margin-bottom: 5px;
+	}
 	section {
 		padding: 10px 0;
 		border-top: 1px solid $grayLighter;
@@ -110,6 +114,13 @@ aside {
 		letter-spacing: -1px;
 		margin-bottom: 3px;
 	}
+}
+.content {
+	display:block;
+}
+
+.timestamp {
+	color:$grayLight;
 }
 
 .gravatar {
@@ -154,6 +165,18 @@ input, textarea, select, .uneditable-input {
 		}
 	}
 }
+/* microposts */
+
+.microposts {
+	list-style:none;
+	margin: 10px 0 0 0;
+
+	li {
+		padding: 10px 0;
+		border-top: 1px solid #e8e8e8;
+	}
+}
+
 /* footer */
 footer {
 	margin-top: 45px;
